--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "cd apps/aquamesh && npm install && npm run build",
   "outputDirectory": "apps/aquamesh/dist",
-  "framework": "other",
+  "framework": "react-router",
   "rewrites": [
     {
       "source": "/(.*)",
