--- a/apps/aquamesh/package.json
+++ b/apps/aquamesh/package.json
@@ -8,7 +8,7 @@
     "serve": "serve -l 3000 -s dist",
     "bs": "npm run build && npm run serve",
     "test": "vitest --run --config ./vitest.config.ts ./tests/unit/ --reporter verbose && npx playwright test",
-    "test:unit": "vitest --config ./vitest.config.ts ./tests/unit/",
+    "test:unit": "vitest --run --config ./vitest.config.ts ./tests/unit/",
     "test:e2e": "npx playwright test",
     "test:snapshot": "npx playwright test --update-snapshots"
   },
